# Android_hotupdate

./: .gitignore  APK签名验证完成总结.md  CRASH_FIX.md  Dockerfile  GeneratePatch.java  JITPACK_RELEASE.md  MAVEN_CENTRAL_PUBLISH.md  PATCH_EFFECT_TEST_GUIDE.md  QUICK_TEST_GUIDE.md  README.md  README_EN.md  SECURITY_AUDIT.md  SECURITY_IMPROVEMENT.md  SECURITY_TEST_GUIDE.md  TEST_INSTRUCTIONS.md  TEST_ZIP_PASSWORD.md  TEST_ZIP_PASSWORD_APPLIED_ENCRYPTION.md  ZIP_PASSWORD_INPUT_FLOW.md  ZIP_PASSWORD_PROTECTION.md  ZIP_PASSWORD_STORAGE_PROTECTION.md  build.gradle  check-publish-config.bat  gradle.properties  jitpack.yml  maven-publish.gradle  patch.json  publish-maven.bat  publish-plugin.bat  publish-to-maven-central.bat  publish-to-maven-central.sh  settings.gradle  version.json  zeabur.json
app/: build.gradle  smlieapp.bks  smlieapp_new.p12
docs/: APKSIG_INTEGRATION.md  APKSIG_MIGRATION.md  APKSIG_UPGRADE_SUMMARY.md  ARCHITECTURE.md  DEX_HOT_UPDATE_LIMITATION.md  FAQ.md  JKS_NATIVE_SUPPORT_COMPLETE.md  JKS_SIGNING_ISSUE.md  PATCH_FORMAT.md  PATCH_FORMAT_VALIDATION.md  PATCH_MERGE.md  PATCH_SIGNING.md  PERFORMANCE.md  PROJECT_STATUS_AND_ROADMAP.md  RESOURCES_ARSC_COMPRESSION_EXPLAINED.md  RESOURCES_ARSC_FIX.md  SERVER_ENHANCEMENT.md  SIGNATURE_COMPARISON.md  USAGE.md  (+3 more)
patch-native/src/main/cpp/: CMakeLists.txt
patch-native/src/main/cpp/include/: bsdiff.h  bspatch.h  compress.h  hash.h  jks_parser.h  openssl_wrapper.h  patch_engine.h
patch-native/src/main/cpp/src/: bsdiff.c  bspatch.c  compress.cpp  crypto_impl.cpp  des_impl.cpp  hash.cpp  jks_jni.cpp  jks_parser.cpp  patch_engine.cpp  patch_engine_jni.cpp
(+220 files in other folders)
